Added ComprehensiveVisualizedAnalysis pipeline
